<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:id="@+id/control_layout"
    tools:context=".DeviceControlActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/officeLightSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/office_light"
        app:layout_constraintBottom_toTopOf="@+id/kitchenLightSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/kitchenLightSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kitchen_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/officeFanSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/office_fan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kitchenLightSwitch"
        app:layout_constraintVertical_bias="0.25" />

    <include
        android:id="@+id/tray_fragment"
        layout="@layout/spokestack_tray_fragment"
        />
</androidx.constraintlayout.widget.ConstraintLayout>